--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -9,3 +9,18 @@
   height: 200px;
   width: 200px;
 }
+
+.row {
+    display: flex;
+    justify-content: center;
+}
+
+.description {
+    font-size: 1.5rem;
+    white-space: nowrap;
+}
+
+.tip {
+    color: var(--ifm-color-primary);
+    font-weight: var(--ifm-heading-font-weight);
+}
