--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,8 @@
  */
 
 /* You can override the default Infima variables here. */
+@import '~katex/dist/katex.min.css';
+
 :root {
   --ifm-color-primary: #4477b3;
   --ifm-color-primary-dark: #29784c;
